force-app/main/default/objects/Question_And_Answer__c/Question_And_Answer__c.object-meta.xml
<CustomObject>
    <description>This will hold question and answers related to Opportunity and  Applicant.</description>
    <label>Question And Answer</label>
    <nameField>
        <displayFormat>QNA-{0000000000}</displayFormat>
        <label>Question and Answer  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questions And Answers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>