force-app/main/default/objects/Question_And_Answer__c/fields/Answer_ID__c.field-meta.xml
<CustomField>
    <fullName>Answer_ID__c</fullName>
    <description>This is the answer domain id</description>
    <externalId>true</externalId>
    <label>Answer ID</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>