force-app/main/default/objects/Question_And_Answer__c/fields/Applicant__c.field-meta.xml
<CustomField>
    <fullName>Applicant__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This will hold the related applicant object</description>
    <label>Applicant</label>
    <referenceTo>LoanApplicant</referenceTo>
    <relationshipLabel>Questions And Answers</relationshipLabel>
    <relationshipName>Questions_And_Answers</relationshipName>
    <type>Lookup</type>
</CustomField>