force-app/main/default/objects/Question_And_Answer__c/fields/Domain_Id__c.field-meta.xml
<CustomField>
    <fullName>Domain_Id__c</fullName>
    <description>This is the domin id in the API</description>
    <externalId>true</externalId>
    <label>Domain Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>