force-app/main/default/objects/Question_And_Answer__c/fields/General_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>General_Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This is the related general opportunity</description>
    <label>General Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Question And Answers</relationshipLabel>
    <relationshipName>Question_And_Answers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>