force-app/main/default/objects/Question_And_Answer__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <description>This is the actual question text</description>
    <label>Question</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>