force-app/main/default/objects/Question_And_Answer__c/fields/Question_ID__c.field-meta.xml
<CustomField>
    <fullName>Question_ID__c</fullName>
    <description>This is the question id</description>
    <externalId>true</externalId>
    <label>Question ID</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>