force-app/main/default/objects/Question_And_Answer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Question__c</columns>
    <columns>Answer__c</columns>
    <columns>General_Opportunity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>